--- a/Models/Cockpit/Models/engine-rating.ac
+++ b/Models/Cockpit/Models/engine-rating.ac
@@ -1,16 +1,19 @@
 AC3Db
-MATERIAL "White.016" rgb 0.500 0.500 0.500  amb 0.500 0.500 0.500  emis 0.100 0.100 0.100  spec 0.300 0.300 0.300  shi 32 trans 0.000
-MATERIAL "Label.009" rgb 0.000 0.000 0.000  amb 0.000 0.000 0.000  emis 0.000 0.000 0.000  spec 0.000 0.000 0.000  shi 32 trans 0.000
-MATERIAL "Yellow.009" rgb 0.500 0.500 0.000  amb 0.25 0.25 0  emis 0.100 0.100 0.0  spec 0.300 0.300 0.300  shi 32 trans 0.000
-MATERIAL "Frame.023" rgb 0.705 0.789 0.868  amb 1.000 1.000 1.000  emis 0.150 0.150 0.150  spec 0.150 0.150 0.150  shi 32 trans 0.000
+MATERIAL "DefaultWhite" rgb 1 1 1  amb 1 1 1  emis 0 0 0  spec 0.5 0.5 0.5  shi 64  trans 0
+MATERIAL "Label.009" rgb 0 0 0 amb 0 0 0 emis 0 0 0 spec 0 0 0 shi 128 trans 0
+MATERIAL "Yellow.009" rgb 0.5 0.5 0 amb 0.166667 0.166667 0.166667 emis 0.133333 0.133333 0.133333 spec 0.3 0.3 0.3 shi 128 trans 0
+MATERIAL "Frame.023" rgb 0.705 0.789 0.868 amb 1 1 1 emis 0.3 0.3 0.3 spec 0.15 0.15 0.15 shi 128 trans 0
+MATERIAL "White.016" rgb 0.5 0.5 0.5 amb 0.5 0.5 0.5 emis 0.2 0.2 0.2 spec 0.3 0.3 0.3 shi 128 trans 0
 OBJECT world
-name "Blender_exporter_v2.19__engine-rating.ac"
 kids 9
 OBJECT poly
 name "CLB"
-data 8
-CLB.mesh
-crease 40.0
+loc 0 0 -0
+data 3
+CLB
+texture "white_plastic.png"
+texrep 1.000000 1.000000
+crease 39.999999
 numvert 8
 0.005 -0.01536 0.0075
 0.005 -0.01536 -0.0075
@@ -21,75 +24,79 @@ numvert 8
 0.008 -0.00486 -0.0075
 0.008 -0.00486 0.0075
 numsurf 6
-SURF 0X20
-mat 0
+SURF 0x20
+mat 4
 refs 4
-1 0 0
-0 0 0
+1 1 1
+0 1 0
 4 0 0
-5 0 0
-SURF 0X20
-mat 0
+5 0 1
+SURF 0x20
+mat 4
 refs 4
-5 0 0
-6 0 0
-2 0 0
-1 0 0
-SURF 0X20
-mat 0
+5 0 1
+6 0 1
+2 1 1
+1 1 1
+SURF 0x20
+mat 4
 refs 4
-6 0 0
+6 0 1
 7 0 0
-3 0 0
-2 0 0
-SURF 0X20
-mat 0
+3 1 0
+2 1 1
+SURF 0x20
+mat 4
 refs 4
-0 0 0
-3 0 0
+0 1 0
+3 1 0
 7 0 0
 4 0 0
-SURF 0X20
-mat 0
+SURF 0x20
+mat 4
 refs 4
-0 0 0
-1 0 0
-2 0 0
-3 0 0
-SURF 0X20
-mat 0
+0 1 0
+1 1 1
+2 1 1
+3 1 0
+SURF 0x20
+mat 4
 refs 4
 7 0 0
-6 0 0
-5 0 0
+6 0 1
+5 0 1
 4 0 0
 kids 0
 OBJECT poly
 name "CLBLabel"
-data 13
-CLBLabel.mesh
-crease 40.0
+loc 0 0 -0
+data 8
+CLBLabel
 texture "engine-rating.png"
-texrep 1 1
+texrep 1.000000 1.000000
+crease 39.999999
 numvert 4
 0.0081 -0.01637 -0.0075
 0.0081 -0.01637 0.0075
 0.0081 -0.00587 -0.0075
 0.0081 -0.00587 0.0075
 numsurf 1
-SURF 0X20
+SURF 0x20
 mat 1
 refs 4
-1 0 0.075
-0 0.5 0.075
-2 0.5 0.425
-3 0 0.425
+1 0 0.07500000298
+0 0.5 0.07500000298
+2 0.5 0.425000011921
+3 0 0.425000011921
 kids 0
 OBJECT poly
 name "CRS"
-data 8
-CRS.mesh
-crease 40.0
+loc 0 0 -0
+data 3
+CRS
+texture "white_plastic.png"
+texrep 1.000000 1.000000
+crease 39.999999
 numvert 8
 0.005 -0.03014 0.0075
 0.005 -0.03014 -0.0075
@@ -100,75 +107,79 @@ numvert 8
 0.008 -0.01964 -0.0075
 0.008 -0.01964 0.0075
 numsurf 6
-SURF 0X20
-mat 0
+SURF 0x20
+mat 4
 refs 4
-1 0 0
-0 0 0
+1 1 1
+0 1 0
 4 0 0
-5 0 0
-SURF 0X20
-mat 0
+5 0 1
+SURF 0x20
+mat 4
 refs 4
-5 0 0
-6 0 0
-2 0 0
-1 0 0
-SURF 0X20
-mat 0
+5 0 1
+6 0 1
+2 1 1
+1 1 1
+SURF 0x20
+mat 4
 refs 4
-6 0 0
+6 0 1
 7 0 0
-3 0 0
-2 0 0
-SURF 0X20
-mat 0
+3 1 0
+2 1 1
+SURF 0x20
+mat 4
 refs 4
-0 0 0
-3 0 0
+0 1 0
+3 1 0
 7 0 0
 4 0 0
-SURF 0X20
-mat 0
+SURF 0x20
+mat 4
 refs 4
-0 0 0
-1 0 0
-2 0 0
-3 0 0
-SURF 0X20
-mat 0
+0 1 0
+1 1 1
+2 1 1
+3 1 0
+SURF 0x20
+mat 4
 refs 4
 7 0 0
-6 0 0
-5 0 0
+6 0 1
+5 0 1
 4 0 0
 kids 0
 OBJECT poly
 name "CRSLabel"
-data 13
-CRSLabel.mesh
-crease 40.0
+loc 0 0 -0
+data 8
+CRSLabel
 texture "engine-rating.png"
-texrep 1 1
+texrep 1.000000 1.000000
+crease 39.999999
 numvert 4
 0.0081 -0.03104 -0.0075
 0.0081 -0.03104 0.0075
 0.0081 -0.02054 -0.0075
 0.0081 -0.02054 0.0075
 numsurf 1
-SURF 0X20
+SURF 0x20
 mat 1
 refs 4
-1 0.5 0.075
-0 1 0.075
-2 1 0.425
-3 0.5 0.425
+1 0.5 0.07500000298
+0 1 0.07500000298
+2 1 0.425000011921
+3 0.5 0.425000011921
 kids 0
 OBJECT poly
 name "CTY"
-data 8
-CTY.mesh
-crease 40.0
+loc 0 0 -0
+data 3
+CTY
+texture "yellow_plastic.png"
+texrep 1.000000 1.000000
+crease 39.999999
 numvert 8
 0.005 0.01467 0.0075
 0.005 0.01467 -0.0075
@@ -179,77 +190,79 @@ numvert 8
 0.008 0.02517 -0.0075
 0.008 0.02517 0.0075
 numsurf 6
-SURF 0X20
+SURF 0x20
 mat 2
 refs 4
-1 0 0
-0 0 0
-4 0 0
-5 0 0
-SURF 0X20
+1 0.000000455165 0
+0 0.000000455165 1
+4 1 1
+5 1 0.000000159308
+SURF 0x20
 mat 2
 refs 4
-5 0 0
-6 0 0
+5 1 0.000000159308
+6 0.999999582767 0.000000159308
 2 0 0
-1 0 0
-SURF 0X20
+1 0.000000455165 0
+SURF 0x20
 mat 2
 refs 4
-6 0 0
-7 0 0
-3 0 0
+6 0.999999582767 0.000000159308
+7 0.999999582767 1
+3 0 1
 2 0 0
-SURF 0X20
+SURF 0x20
 mat 2
 refs 4
-0 0 0
-3 0 0
-7 0 0
-4 0 0
-SURF 0X20
+0 0.000000455165 1
+3 0 1
+7 0.999999582767 1
+4 1 1
+SURF 0x20
 mat 2
 refs 4
-0 0 0
-1 0 0
+0 0.000000455165 1
+1 0.000000455165 0
 2 0 0
-3 0 0
-SURF 0X20
+3 0 1
+SURF 0x20
 mat 2
 refs 4
-7 0 0
-6 0 0
-5 0 0
-4 0 0
+7 0.999999582767 1
+6 0.999999582767 0.000000159308
+5 1 0.000000159308
+4 1 1
 kids 0
 OBJECT poly
 name "CTYLabel"
-data 13
-CTYLabel.mesh
-crease 40.0
+loc 0 0 -0
+data 8
+CTYLabel
 texture "engine-rating.png"
-texrep 1 1
+texrep 1.000000 1.000000
+crease 39.999999
 numvert 4
 0.0081 0.01343 -0.0075
 0.0081 0.01343 0.0075
 0.0081 0.02393 -0.0075
 0.0081 0.02393 0.0075
 numsurf 1
-SURF 0X20
+SURF 0x20
 mat 1
 refs 4
-1 0 0.575
-0 0.5 0.575
-2 0.5 0.925
-3 0 0.925
+1 0 0.574999988079
+0 0.5 0.574999988079
+2 0.5 0.925000011921
+3 0 0.925000011921
 kids 0
 OBJECT poly
 name "Frame"
-data 14
-Frame.mesh.025
-crease 40.0
+loc 0 0 -0
+data 5
+Frame
 texture "panel.png"
-texrep 1 1
+texrep 1.000000 1.000000
+crease 39.999999
 numvert 8
 0 -0.03137 0.01
 0 -0.03137 -0.01
@@ -260,54 +273,57 @@ numvert 8
 0.005 0.02673 -0.01
 0.005 0.02673 0.01
 numsurf 6
-SURF 0X20
+SURF 0x20
 mat 3
 refs 4
-1 0.215203 0.097344
-0 0.215203 0.107344
-4 0.244253 0.107344
-5 0.244253 0.097344
-SURF 0X20
+1 0.215203002095 0.097344003618
+0 0.215203002095 0.107344001532
+4 0.244252994657 0.107344001532
+5 0.244252994657 0.097344003618
+SURF 0x20
 mat 3
 refs 4
-5 0.229728 0.118028
-6 0.232228 0.118028
-2 0.232228 0.088978
-1 0.229728 0.088978
-SURF 0X20
+5 0.229727998376 0.118027999997
+6 0.232227995992 0.118027999997
+2 0.232227995992 0.088977999985
+1 0.229727998376 0.088977999985
+SURF 0x20
 mat 3
 refs 4
-6 0.580321 0.466196
-7 0.580321 0.604441
-3 0.412739 0.604441
-2 0.412739 0.466196
-SURF 0X20
+6 0.580321013927 0.466196000576
+7 0.580321013927 0.60444098711
+3 0.412739008665 0.60444098711
+2 0.412739008665 0.466196000576
+SURF 0x20
 mat 3
 refs 4
-0 0.229728 0.088978
-3 0.232228 0.088978
-7 0.232228 0.118028
-4 0.229728 0.118028
-SURF 0X20
+0 0.229727998376 0.088977999985
+3 0.232227995992 0.088977999985
+7 0.232227995992 0.118027999997
+4 0.229727998376 0.118027999997
+SURF 0x20
 mat 3
 refs 4
-0 0.229728 0.107344
-1 0.229728 0.097344
-2 0.232228 0.097344
-3 0.232228 0.107344
-SURF 0X20
+0 0.229727998376 0.107344001532
+1 0.229727998376 0.097344003618
+2 0.232227995992 0.097344003618
+3 0.232227995992 0.107344001532
+SURF 0x20
 mat 3
 refs 4
-7 0.232228 0.107344
-6 0.232228 0.097344
-5 0.229728 0.097344
-4 0.229728 0.107344
+7 0.232227995992 0.107344001532
+6 0.232227995992 0.097344003618
+5 0.229727998376 0.097344003618
+4 0.229727998376 0.107344001532
 kids 0
 OBJECT poly
 name "TO"
-data 7
-TO.mesh
-crease 40.0
+loc 0 0 -0
+data 2
+TO
+texture "yellow_plastic.png"
+texrep 1.000000 1.000000
+crease 39.999999
 numvert 8
 0.005 -0.00057 0.0075
 0.005 -0.00057 -0.0075
@@ -318,67 +334,68 @@ numvert 8
 0.008 0.00993 -0.0075
 0.008 0.00993 0.0075
 numsurf 6
-SURF 0X20
+SURF 0x20
 mat 2
 refs 4
-1 0 0
-0 0 0
-4 0 0
-5 0 0
-SURF 0X20
+1 0.000000455165 0
+0 0.000000455165 1
+4 1 1
+5 1 0.000000159308
+SURF 0x20
 mat 2
 refs 4
-5 0 0
-6 0 0
+5 1 0.000000159308
+6 0.999999582767 0.000000159308
 2 0 0
-1 0 0
-SURF 0X20
+1 0.000000455165 0
+SURF 0x20
 mat 2
 refs 4
-6 0 0
-7 0 0
-3 0 0
+6 0.999999582767 0.000000159308
+7 0.999999582767 1
+3 0 1
 2 0 0
-SURF 0X20
+SURF 0x20
 mat 2
 refs 4
-0 0 0
-3 0 0
-7 0 0
-4 0 0
-SURF 0X20
+0 0.000000455165 1
+3 0 1
+7 0.999999582767 1
+4 1 1
+SURF 0x20
 mat 2
 refs 4
-0 0 0
-1 0 0
+0 0.000000455165 1
+1 0.000000455165 0
 2 0 0
-3 0 0
-SURF 0X20
+3 0 1
+SURF 0x20
 mat 2
 refs 4
-7 0 0
-6 0 0
-5 0 0
-4 0 0
+7 0.999999582767 1
+6 0.999999582767 0.000000159308
+5 1 0.000000159308
+4 1 1
 kids 0
 OBJECT poly
 name "TOLabel"
-data 12
-TOLabel.mesh
-crease 40.0
+loc 0 0 -0
+data 7
+TOLabel
 texture "engine-rating.png"
-texrep 1 1
+texrep 1.000000 1.000000
+crease 39.999999
 numvert 4
 0.0081 -0.00136 -0.0075
 0.0081 -0.00136 0.0075
 0.0081 0.00914 -0.0075
 0.0081 0.00914 0.0075
 numsurf 1
-SURF 0X20
+SURF 0x20
 mat 1
 refs 4
-1 0.5 0.575
-0 1 0.575
-2 1 0.925
-3 0.5 0.925
+1 0.5 0.574999988079
+0 1 0.574999988079
+2 1 0.925000011921
+3 0.5 0.925000011921
 kids 0
