--- a/Models/Cockpit/Models/gearlight.ac
+++ b/Models/Cockpit/Models/gearlight.ac
@@ -1,18 +1,17 @@
 AC3Db
-MATERIAL "Frame.012" rgb 0.705 0.789 0.868  amb 1.000 1.000 1.000  emis 0.150 0.150 0.150  spec 0.150 0.150 0.150  shi 32 trans 0.000
-MATERIAL "G1" rgb 0.000 0.400 0.000  amb 0.000 0.400 0.000  emis 0.000 0.100 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
-MATERIAL "Green.000" rgb 0.000 0.000 0.000  amb 0.133 0.133 0.133  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
-MATERIAL "R1" rgb .5 0.000 0.000  amb 0.500 0 0  emis 0.100 0.000 0.000  spec 0.500 0.500 0.500  shi 12 trans 0.000
-MATERIAL "Red.000" rgb 0.800 0.000 0.000  amb 0.5 0.0 0.0  emis 0.100 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
-MATERIAL "O1" rgb 0.4 0.2 0.000  amb 0.4000 0.20 0.000  emis 0.100 0.050 0.000  spec 0.500 0.500 0.500  shi 12 trans 0.000
-MATERIAL "Orange.000" rgb 0.000 0.000 0.000  amb 0.200 0.200 0.200  emis 0.333 0.333 0.333  spec 0.300 0.300 0.300  shi 32 trans 0.000
+MATERIAL "Frame.000" rgb 0.705 0.789 0.868  amb 1.000 1.000 1.000  emis 0.300 0.300 0.300  spec 0.150 0.150 0.150  shi 128 trans 0.000
+MATERIAL "G1.001" rgb 0.000 0.400 0.000  amb 0.133 0.133 0.133  emis 0.067 0.067 0.067  spec 0.300 0.300 0.300  shi 128 trans 0.000
+MATERIAL "Green.001" rgb 0.000 0.000 0.000  amb 0.133 0.133 0.133  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 128 trans 0.000
+MATERIAL "R1.001" rgb 0.500 0.000 0.000  amb 0.167 0.167 0.167  emis 0.067 0.067 0.067  spec 0.500 0.500 0.500  shi 128 trans 0.000
+MATERIAL "O1.001" rgb 0.400 0.200 0.000  amb 0.200 0.200 0.200  emis 0.100 0.100 0.100  spec 0.500 0.500 0.500  shi 128 trans 0.000
+MATERIAL "Orange.001" rgb 0.000 0.000 0.000  amb 0.200 0.200 0.200  emis 0.666 0.666 0.666  spec 0.300 0.300 0.300  shi 128 trans 0.000
 OBJECT world
 name "Blender_exporter_v2.19__gearlight.ac"
-kids 23
+kids 19
 OBJECT poly
 name "Frame.001"
-data 14
-Frame.mesh.012
+data 9
+Frame.001
 crease 40.0
 texture "panel.png"
 texrep 1 1
@@ -441,9 +440,11 @@ refs 4
 kids 0
 OBJECT poly
 name "GreenFrame"
-data 19
-GreenFrame.mesh.000
+data 10
+GreenFrame
 crease 40.0
+texture "green_plastic.png"
+texrep 1 1
 numvert 8
 -0.00021 -0.0231 0.02753
 -0.00021 -0.0105 0.02753
@@ -457,51 +458,53 @@ numsurf 6
 SURF 0X20
 mat 1
 refs 4
-1 0 0
+1 1 0
 0 0 0
-4 0 0
-5 0 0
+4 0 1
+5 1 1
 SURF 0X20
 mat 1
 refs 4
-5 0 0
-6 0 0
-2 0 0
-1 0 0
+5 1 1
+6 0.933333 0.9
+2 0.933334 0.1
+1 1 0
 SURF 0X20
 mat 1
 refs 4
-6 0 0
-7 0 0
-3 0 0
-2 0 0
-SURF 0X20
-mat 1
-refs 4
-0 0 0
-3 0 0
-7 0 0
-4 0 0
+6 0.933333 0.9
+7 0.066667 0.9
+3 0.066667 0.1
+2 0.933334 0.1
 SURF 0X20
 mat 1
 refs 4
 0 0 0
-1 0 0
-2 0 0
-3 0 0
+3 0.066667 0.1
+7 0.066667 0.9
+4 0 1
 SURF 0X20
 mat 1
 refs 4
-7 0 0
-6 0 0
-5 0 0
-4 0 0
+0 0 0
+1 1 0
+2 0.933334 0.1
+3 0.066667 0.1
+SURF 0X20
+mat 1
+refs 4
+7 0.066667 0.9
+6 0.933333 0.9
+5 1 1
+4 0 1
 kids 0
 OBJECT poly
 name "GreenFrame.001"
-data 19
-GreenFrame.mesh.001
+data 14
+GreenFrame.001
 crease 40.0
+texture "green_plastic.png"
+texrep 1 1
 numvert 8
 -0.00021 -0.0231 0.01553
 -0.00021 -0.0105 0.01553
@@ -515,51 +518,53 @@ numsurf 6
 SURF 0X20
 mat 1
 refs 4
-1 0 0
+1 1 0
 0 0 0
-4 0 0
-5 0 0
+4 0 0.999999
+5 1 1
 SURF 0X20
 mat 1
 refs 4
-5 0 0
-6 0 0
-2 0 0
-1 0 0
+5 1 1
+6 0.933334 0.9
+2 0.933334 0.099999
+1 1 0
 SURF 0X20
 mat 1
 refs 4
-6 0 0
-7 0 0
-3 0 0
-2 0 0
-SURF 0X20
-mat 1
-refs 4
-0 0 0
-3 0 0
-7 0 0
-4 0 0
+6 0.933334 0.9
+7 0.066667 0.9
+3 0.066667 0.099999
+2 0.933334 0.099999
 SURF 0X20
 mat 1
 refs 4
 0 0 0
-1 0 0
-2 0 0
-3 0 0
+3 0.066667 0.099999
+7 0.066667 0.9
+4 0 0.999999
 SURF 0X20
 mat 1
 refs 4
-7 0 0
-6 0 0
-5 0 0
-4 0 0
+0 0 0
+1 1 0
+2 0.933334 0.099999
+3 0.066667 0.099999
+SURF 0X20
+mat 1
+refs 4
+7 0.066667 0.9
+6 0.933334 0.9
+5 1 1
+4 0 0.999999
 kids 0
 OBJECT poly
 name "GreenFrame.002"
-data 19
-GreenFrame.mesh.002
+data 14
+GreenFrame.002
 crease 40.0
+texture "green_plastic.png"
+texrep 1 1
 numvert 8
 -0.00021 -0.02316 0.00358
 -0.00021 -0.01266 0.00358
@@ -573,51 +578,53 @@ numsurf 6
 SURF 0X20
 mat 1
 refs 4
-1 0 0
+1 1 0
 0 0 0
-4 0 0
-5 0 0
+4 0 1
+5 1 1
 SURF 0X20
 mat 1
 refs 4
-5 0 0
-6 0 0
-2 0 0
-1 0 0
+5 1 1
+6 0.933333 0.9
+2 0.933333 0.1
+1 1 0
 SURF 0X20
 mat 1
 refs 4
-6 0 0
-7 0 0
-3 0 0
-2 0 0
-SURF 0X20
-mat 1
-refs 4
-0 0 0
-3 0 0
-7 0 0
-4 0 0
+6 0.933333 0.9
+7 0.066666 0.9
+3 0.066666 0.1
+2 0.933333 0.1
 SURF 0X20
 mat 1
 refs 4
 0 0 0
-1 0 0
-2 0 0
-3 0 0
+3 0.066666 0.1
+7 0.066666 0.9
+4 0 1
 SURF 0X20
 mat 1
 refs 4
-7 0 0
-6 0 0
-5 0 0
-4 0 0
+0 0 0
+1 1 0
+2 0.933333 0.1
+3 0.066666 0.1
+SURF 0X20
+mat 1
+refs 4
+7 0.066666 0.9
+6 0.933333 0.9
+5 1 1
+4 0 1
 kids 0
 OBJECT poly
 name "GreenFrame.003"
-data 19
-GreenFrame.mesh.003
+data 14
+GreenFrame.003
 crease 40.0
+texture "green_plastic.png"
+texrep 1 1
 numvert 8
 -0.00021 -0.0231 -0.00838
 -0.00021 -0.0105 -0.00838
@@ -631,50 +638,50 @@ numsurf 6
 SURF 0X20
 mat 1
 refs 4
-1 0 0
+1 1 0
 0 0 0
-4 0 0
-5 0 0
+4 0 0.999999
+5 1 1
 SURF 0X20
 mat 1
 refs 4
-5 0 0
-6 0 0
-2 0 0
-1 0 0
+5 1 1
+6 0.933333 0.9
+2 0.933333 0.1
+1 1 0
 SURF 0X20
 mat 1
 refs 4
-6 0 0
-7 0 0
-3 0 0
-2 0 0
-SURF 0X20
-mat 1
-refs 4
-0 0 0
-3 0 0
-7 0 0
-4 0 0
+6 0.933333 0.9
+7 0.066667 0.9
+3 0.066667 0.1
+2 0.933333 0.1
 SURF 0X20
 mat 1
 refs 4
 0 0 0
-1 0 0
-2 0 0
-3 0 0
+3 0.066667 0.1
+7 0.066667 0.9
+4 0 0.999999
 SURF 0X20
 mat 1
 refs 4
-7 0 0
-6 0 0
-5 0 0
-4 0 0
+0 0 0
+1 1 0
+2 0.933333 0.1
+3 0.066667 0.1
+SURF 0X20
+mat 1
+refs 4
+7 0.066667 0.9
+6 0.933333 0.9
+5 1 1
+4 0 0.999999
 kids 0
 OBJECT poly
 name "GreenLight"
-data 19
-GreenLight.mesh.000
+data 10
+GreenLight
 crease 40.0
 texture "Autopilot.png"
 texrep 1 1
@@ -733,8 +740,8 @@ refs 4
 kids 0
 OBJECT poly
 name "GreenLight.001"
-data 19
-GreenLight.mesh.001
+data 14
+GreenLight.001
 crease 40.0
 texture "Autopilot.png"
 texrep 1 1
@@ -793,8 +800,8 @@ refs 4
 kids 0
 OBJECT poly
 name "GreenLight.002"
-data 19
-GreenLight.mesh.002
+data 14
+GreenLight.002
 crease 40.0
 texture "Autopilot.png"
 texrep 1 1
@@ -853,8 +860,8 @@ refs 4
 kids 0
 OBJECT poly
 name "GreenLight.003"
-data 19
-GreenLight.mesh.003
+data 14
+GreenLight.003
 crease 40.0
 texture "Autopilot.png"
 texrep 1 1
@@ -913,9 +920,11 @@ refs 4
 kids 0
 OBJECT poly
 name "OrangeFrame"
-data 20
-OrangeFrame.mesh.000
+data 11
+OrangeFrame
 crease 40.0
+texture "red_pastic.png"
+texrep 1 1
 numvert 8
 -0.00021 -0.00525 0.02753
 -0.00021 0.00525 0.02753
@@ -929,51 +938,53 @@ numsurf 6
 SURF 0X20
 mat 3
 refs 4
-1 0 0
+1 1 0
 0 0 0
-4 0 0
-5 0 0
+4 0 1
+5 1 1
 SURF 0X20
 mat 3
 refs 4
-5 0 0
-6 0 0
-2 0 0
-1 0 0
+5 1 1
+6 0.933334 0.9
+2 0.933334 0.1
+1 1 0
 SURF 0X20
 mat 3
 refs 4
-6 0 0
-7 0 0
-3 0 0
-2 0 0
-SURF 0X20
-mat 3
-refs 4
-0 0 0
-3 0 0
-7 0 0
-4 0 0
+6 0.933334 0.9
+7 0.066666 0.9
+3 0.066666 0.1
+2 0.933334 0.1
 SURF 0X20
 mat 3
 refs 4
 0 0 0
-1 0 0
-2 0 0
-3 0 0
+3 0.066666 0.1
+7 0.066666 0.9
+4 0 1
 SURF 0X20
 mat 3
 refs 4
-7 0 0
-6 0 0
-5 0 0
-4 0 0
+0 0 0
+1 1 0
+2 0.933334 0.1
+3 0.066666 0.1
+SURF 0X20
+mat 3
+refs 4
+7 0.066666 0.9
+6 0.933334 0.9
+5 1 1
+4 0 1
 kids 0
 OBJECT poly
 name "OrangeFrame.001"
-data 20
-OrangeFrame.mesh.001
+data 15
+OrangeFrame.001
 crease 40.0
+texture "red_pastic.png"
+texrep 1 1
 numvert 8
 -0.00021 -0.00525 0.01553
 -0.00021 0.00525 0.01553
@@ -987,51 +998,53 @@ numsurf 6
 SURF 0X20
 mat 3
 refs 4
-1 0 0
+1 1 0
 0 0 0
-4 0 0
-5 0 0
+4 0 1
+5 0.999999 1
 SURF 0X20
 mat 3
 refs 4
-5 0 0
-6 0 0
-2 0 0
-1 0 0
+5 0.999999 1
+6 0.933333 0.9
+2 0.933333 0.099999
+1 1 0
 SURF 0X20
 mat 3
 refs 4
-6 0 0
-7 0 0
-3 0 0
-2 0 0
-SURF 0X20
-mat 3
-refs 4
-0 0 0
-3 0 0
-7 0 0
-4 0 0
+6 0.933333 0.9
+7 0.066666 0.9
+3 0.066666 0.099999
+2 0.933333 0.099999
 SURF 0X20
 mat 3
 refs 4
 0 0 0
-1 0 0
-2 0 0
-3 0 0
+3 0.066666 0.099999
+7 0.066666 0.9
+4 0 1
 SURF 0X20
 mat 3
 refs 4
-7 0 0
-6 0 0
-5 0 0
-4 0 0
+0 0 0
+1 1 0
+2 0.933333 0.099999
+3 0.066666 0.099999
+SURF 0X20
+mat 3
+refs 4
+7 0.066666 0.9
+6 0.933333 0.9
+5 0.999999 1
+4 0 1
 kids 0
 OBJECT poly
 name "OrangeFrame.002"
-data 20
-OrangeFrame.mesh.002
+data 15
+OrangeFrame.002
 crease 40.0
+texture "red_pastic.png"
+texrep 1 1
 numvert 8
 -0.00021 -0.00525 0.00358
 -0.00021 0.00525 0.00358
@@ -1045,51 +1058,53 @@ numsurf 6
 SURF 0X20
 mat 3
 refs 4
-1 0 0
+1 1 0
 0 0 0
-4 0 0
-5 0 0
+4 0 1
+5 1 1
 SURF 0X20
 mat 3
 refs 4
-5 0 0
-6 0 0
-2 0 0
-1 0 0
+5 1 1
+6 0.933333 0.9
+2 0.933333 0.1
+1 1 0
 SURF 0X20
 mat 3
 refs 4
-6 0 0
-7 0 0
-3 0 0
-2 0 0
-SURF 0X20
-mat 3
-refs 4
-0 0 0
-3 0 0
-7 0 0
-4 0 0
+6 0.933333 0.9
+7 0.066666 0.9
+3 0.066667 0.1
+2 0.933333 0.1
 SURF 0X20
 mat 3
 refs 4
 0 0 0
-1 0 0
-2 0 0
-3 0 0
+3 0.066667 0.1
+7 0.066666 0.9
+4 0 1
 SURF 0X20
 mat 3
 refs 4
-7 0 0
-6 0 0
-5 0 0
-4 0 0
+0 0 0
+1 1 0
+2 0.933333 0.1
+3 0.066667 0.1
+SURF 0X20
+mat 3
+refs 4
+7 0.066666 0.9
+6 0.933333 0.9
+5 1 1
+4 0 1
 kids 0
 OBJECT poly
 name "OrangeFrame.003"
-data 20
-OrangeFrame.mesh.003
+data 15
+OrangeFrame.003
 crease 40.0
+texture "red_pastic.png"
+texrep 1 1
 numvert 8
 -0.00021 -0.00525 -0.00838
 -0.00021 0.00525 -0.00838
@@ -1103,283 +1118,53 @@ numsurf 6
 SURF 0X20
 mat 3
 refs 4
-1 0 0
+1 1 0
 0 0 0
-4 0 0
-5 0 0
+4 0 1
+5 1 1
 SURF 0X20
 mat 3
 refs 4
-5 0 0
-6 0 0
-2 0 0
-1 0 0
+5 1 1
+6 0.933333 0.9
+2 0.933333 0.1
+1 1 0
 SURF 0X20
 mat 3
 refs 4
-6 0 0
-7 0 0
-3 0 0
-2 0 0
-SURF 0X20
-mat 3
-refs 4
-0 0 0
-3 0 0
-7 0 0
-4 0 0
+6 0.933333 0.9
+7 0.066667 0.9
+3 0.066667 0.1
+2 0.933333 0.1
 SURF 0X20
 mat 3
 refs 4
 0 0 0
-1 0 0
-2 0 0
-3 0 0
+3 0.066667 0.1
+7 0.066667 0.9
+4 0 1
 SURF 0X20
 mat 3
 refs 4
-7 0 0
-6 0 0
-5 0 0
-4 0 0
-kids 0
-OBJECT poly
-name "OrangeLight"
-data 20
-OrangeLight.mesh.000
-crease 40.0
-numvert 8
--0.00021 -0.00455 0.02853
--0.00021 0.00455 0.02853
-0.00279 0.00455 0.02853
-0.00279 -0.00455 0.02853
--0.00021 -0.00455 0.03653
--0.00021 0.00455 0.03653
-0.00279 0.00455 0.03653
-0.00279 -0.00455 0.03653
-numsurf 6
-SURF 0X20
-mat 4
-refs 4
-1 0 0
 0 0 0
-4 0 0
-5 0 0
+1 1 0
+2 0.933333 0.1
+3 0.066667 0.1
 SURF 0X20
-mat 4
+mat 3
 refs 4
-5 0 0
-6 0 0
-2 0 0
-1 0 0
-SURF 0X20
-mat 4
-refs 4
-6 0 0
-7 0 0
-3 0 0
-2 0 0
-SURF 0X20
-mat 4
-refs 4
-0 0 0
-3 0 0
-7 0 0
-4 0 0
-SURF 0X20
-mat 4
-refs 4
-0 0 0
-1 0 0
-2 0 0
-3 0 0
-SURF 0X20
-mat 4
-refs 4
-7 0 0
-6 0 0
-5 0 0
-4 0 0
-kids 0
-OBJECT poly
-name "OrangeLight.001"
-data 20
-OrangeLight.mesh.001
-crease 40.0
-numvert 8
--0.00021 -0.00455 0.01653
--0.00021 0.00455 0.01653
-0.00279 0.00455 0.01653
-0.00279 -0.00455 0.01653
--0.00021 -0.00455 0.02453
--0.00021 0.00455 0.02453
-0.00279 0.00455 0.02453
-0.00279 -0.00455 0.02453
-numsurf 6
-SURF 0X20
-mat 4
-refs 4
-1 0 0
-0 0 0
-4 0 0
-5 0 0
-SURF 0X20
-mat 4
-refs 4
-5 0 0
-6 0 0
-2 0 0
-1 0 0
-SURF 0X20
-mat 4
-refs 4
-6 0 0
-7 0 0
-3 0 0
-2 0 0
-SURF 0X20
-mat 4
-refs 4
-0 0 0
-3 0 0
-7 0 0
-4 0 0
-SURF 0X20
-mat 4
-refs 4
-0 0 0
-1 0 0
-2 0 0
-3 0 0
-SURF 0X20
-mat 4
-refs 4
-7 0 0
-6 0 0
-5 0 0
-4 0 0
-kids 0
-OBJECT poly
-name "OrangeLight.002"
-data 20
-OrangeLight.mesh.002
-crease 40.0
-numvert 8
--0.00021 -0.00455 0.00458
--0.00021 0.00455 0.00458
-0.00279 0.00455 0.00458
-0.00279 -0.00455 0.00458
--0.00021 -0.00455 0.01258
--0.00021 0.00455 0.01258
-0.00279 0.00455 0.01258
-0.00279 -0.00455 0.01258
-numsurf 6
-SURF 0X20
-mat 4
-refs 4
-1 0 0
-0 0 0
-4 0 0
-5 0 0
-SURF 0X20
-mat 4
-refs 4
-5 0 0
-6 0 0
-2 0 0
-1 0 0
-SURF 0X20
-mat 4
-refs 4
-6 0 0
-7 0 0
-3 0 0
-2 0 0
-SURF 0X20
-mat 4
-refs 4
-0 0 0
-3 0 0
-7 0 0
-4 0 0
-SURF 0X20
-mat 4
-refs 4
-0 0 0
-1 0 0
-2 0 0
-3 0 0
-SURF 0X20
-mat 4
-refs 4
-7 0 0
-6 0 0
-5 0 0
-4 0 0
-kids 0
-OBJECT poly
-name "OrangeLight.003"
-data 20
-OrangeLight.mesh.003
-crease 40.0
-numvert 8
--0.00021 -0.00455 -0.00738
--0.00021 0.00455 -0.00738
-0.00279 0.00455 -0.00738
-0.00279 -0.00455 -0.00738
--0.00021 -0.00455 0.00062
--0.00021 0.00455 0.00062
-0.00279 0.00455 0.00062
-0.00279 -0.00455 0.00062
-numsurf 6
-SURF 0X20
-mat 4
-refs 4
-1 0 0
-0 0 0
-4 0 0
-5 0 0
-SURF 0X20
-mat 4
-refs 4
-5 0 0
-6 0 0
-2 0 0
-1 0 0
-SURF 0X20
-mat 4
-refs 4
-6 0 0
-7 0 0
-3 0 0
-2 0 0
-SURF 0X20
-mat 4
-refs 4
-0 0 0
-3 0 0
-7 0 0
-4 0 0
-SURF 0X20
-mat 4
-refs 4
-0 0 0
-1 0 0
-2 0 0
-3 0 0
-SURF 0X20
-mat 4
-refs 4
-7 0 0
-6 0 0
-5 0 0
-4 0 0
+7 0.066667 0.9
+6 0.933333 0.9
+5 1 1
+4 0 1
 kids 0
 OBJECT poly
 name "RedFrame"
-data 17
-RedFrame.mesh.000
+data 8
+RedFrame
 crease 40.0
+texture "amber_plastic.png"
+texrep 1 1
 numvert 8
 -0.00021 0.00875 0.02349
 -0.00021 0.01925 0.02349
@@ -1391,53 +1176,55 @@ numvert 8
 0.00269 0.00945 0.03612
 numsurf 6
 SURF 0X20
-mat 5
+mat 4
 refs 4
-1 0 0
+1 1 0
 0 0 0
-4 0 0
-5 0 0
+4 0 1
+5 1 1
 SURF 0X20
-mat 5
+mat 4
 refs 4
-5 0 0
-6 0 0
-2 0 0
-1 0 0
+5 1 1
+6 0.933333 0.900214
+2 0.933333 0.099786
+1 1 0
 SURF 0X20
-mat 5
+mat 4
 refs 4
-6 0 0
-7 0 0
-3 0 0
-2 0 0
+6 0.933333 0.900214
+7 0.066668 0.900214
+3 0.066668 0.099786
+2 0.933333 0.099786
 SURF 0X20
-mat 5
-refs 4
-0 0 0
-3 0 0
-7 0 0
-4 0 0
-SURF 0X20
-mat 5
+mat 4
 refs 4
 0 0 0
-1 0 0
-2 0 0
-3 0 0
+3 0.066668 0.099786
+7 0.066668 0.900214
+4 0 1
 SURF 0X20
-mat 5
+mat 4
 refs 4
-7 0 0
-6 0 0
-5 0 0
-4 0 0
+0 0 0
+1 1 0
+2 0.933333 0.099786
+3 0.066668 0.099786
+SURF 0X20
+mat 4
+refs 4
+7 0.066668 0.900214
+6 0.933333 0.900214
+5 1 1
+4 0 1
 kids 0
 OBJECT poly
 name "RedFrame.001"
-data 17
-RedFrame.mesh.001
+data 12
+RedFrame.001
 crease 40.0
+texture "amber_plastic.png"
+texrep 1 1
 numvert 8
 -0.00021 0.00875 0.00752
 -0.00021 0.01925 0.00752
@@ -1449,53 +1236,55 @@ numvert 8
 0.00269 0.00945 0.02015
 numsurf 6
 SURF 0X20
-mat 5
+mat 4
 refs 4
-1 0 0
+1 1 0
 0 0 0
-4 0 0
-5 0 0
+4 0 1
+5 1 1
 SURF 0X20
-mat 5
+mat 4
 refs 4
-5 0 0
-6 0 0
-2 0 0
-1 0 0
+5 1 1
+6 0.933333 0.900214
+2 0.933333 0.099786
+1 1 0
 SURF 0X20
-mat 5
+mat 4
 refs 4
-6 0 0
-7 0 0
-3 0 0
-2 0 0
+6 0.933333 0.900214
+7 0.066668 0.900214
+3 0.066668 0.099786
+2 0.933333 0.099786
 SURF 0X20
-mat 5
-refs 4
-0 0 0
-3 0 0
-7 0 0
-4 0 0
-SURF 0X20
-mat 5
+mat 4
 refs 4
 0 0 0
-1 0 0
-2 0 0
-3 0 0
+3 0.066668 0.099786
+7 0.066668 0.900214
+4 0 1
 SURF 0X20
-mat 5
+mat 4
 refs 4
-7 0 0
-6 0 0
-5 0 0
-4 0 0
+0 0 0
+1 1 0
+2 0.933333 0.099786
+3 0.066668 0.099786
+SURF 0X20
+mat 4
+refs 4
+7 0.066668 0.900214
+6 0.933333 0.900214
+5 1 1
+4 0 1
 kids 0
 OBJECT poly
 name "RedFrame.002"
-data 17
-RedFrame.mesh.002
+data 12
+RedFrame.002
 crease 40.0
+texture "amber_plastic.png"
+texrep 1 1
 numvert 8
 -0.00021 0.00875 -0.00838
 -0.00021 0.01925 -0.00838
@@ -1507,52 +1296,52 @@ numvert 8
 0.00269 0.00945 0.00425
 numsurf 6
 SURF 0X20
-mat 5
+mat 4
 refs 4
-1 0 0
+1 1 0
 0 0 0
-4 0 0
-5 0 0
+4 0 1
+5 1 1
 SURF 0X20
-mat 5
+mat 4
 refs 4
-5 0 0
-6 0 0
-2 0 0
-1 0 0
+5 1 1
+6 0.933333 0.899572
+2 0.933333 0.099715
+1 1 0
 SURF 0X20
-mat 5
+mat 4
 refs 4
-6 0 0
-7 0 0
-3 0 0
-2 0 0
+6 0.933333 0.899572
+7 0.066668 0.899572
+3 0.066668 0.099715
+2 0.933333 0.099715
 SURF 0X20
-mat 5
-refs 4
-0 0 0
-3 0 0
-7 0 0
-4 0 0
-SURF 0X20
-mat 5
+mat 4
 refs 4
 0 0 0
-1 0 0
-2 0 0
-3 0 0
+3 0.066668 0.099715
+7 0.066668 0.899572
+4 0 1
 SURF 0X20
-mat 5
+mat 4
 refs 4
-7 0 0
-6 0 0
-5 0 0
-4 0 0
+0 0 0
+1 1 0
+2 0.933333 0.099715
+3 0.066668 0.099715
+SURF 0X20
+mat 4
+refs 4
+7 0.066668 0.899572
+6 0.933333 0.899572
+5 1 1
+4 0 1
 kids 0
 OBJECT poly
 name "RedLight"
-data 17
-RedLight.mesh.000
+data 8
+RedLight
 crease 40.0
 texture "Autopilot.png"
 texrep 1 1
@@ -1567,42 +1356,42 @@ numvert 8
 0.00279 0.00945 0.03612
 numsurf 6
 SURF 0X20
-mat 6
+mat 5
 refs 4
 1 0.246223 -0.144765
 0 0.246223 -0.144765
 4 0.246223 -0.144765
 5 0.246223 -0.144765
 SURF 0X20
-mat 6
+mat 5
 refs 4
 5 0.246223 -0.144765
 6 0.246223 -0.144765
 2 0.246223 -0.144765
 1 0.246223 -0.144765
 SURF 0X20
-mat 6
+mat 5
 refs 4
 6 0.174681 0.058564
 7 0.174698 0.032293
 3 0.236531 0.032305
 2 0.236515 0.058577
 SURF 0X20
-mat 6
+mat 5
 refs 4
 0 0.246223 -0.144765
 3 0.246223 -0.144765
 7 0.246223 -0.144765
 4 0.246223 -0.144765
 SURF 0X20
-mat 6
+mat 5
 refs 4
 0 0.246223 -0.144765
 1 0.246223 -0.144765
 2 0.246223 -0.144765
 3 0.246223 -0.144765
 SURF 0X20
-mat 6
+mat 5
 refs 4
 7 0.246223 -0.144765
 6 0.246223 -0.144765
@@ -1611,8 +1400,8 @@ refs 4
 kids 0
 OBJECT poly
 name "RedLight.001"
-data 17
-RedLight.mesh.001
+data 12
+RedLight.001
 crease 40.0
 texture "Autopilot.png"
 texrep 1 1
@@ -1627,42 +1416,42 @@ numvert 8
 0.00279 0.00945 0.02015
 numsurf 6
 SURF 0X20
-mat 6
+mat 5
 refs 4
 1 0.471702 -0.132981
 0 0.471702 -0.132981
 4 0.471702 -0.132981
 5 0.471702 -0.132981
 SURF 0X20
-mat 6
+mat 5
 refs 4
 5 0.471702 -0.132981
 6 0.471702 -0.132981
 2 0.471702 -0.132981
 1 0.471702 -0.132981
 SURF 0X20
-mat 6
+mat 5
 refs 4
 6 0.381189 0.058741
 7 0.381219 0.032046
 3 0.43526 0.032052
 2 0.43523 0.058747
 SURF 0X20
-mat 6
+mat 5
 refs 4
 0 0.471702 -0.132981
 3 0.471702 -0.132981
 7 0.471702 -0.132981
 4 0.471702 -0.132981
 SURF 0X20
-mat 6
+mat 5
 refs 4
 0 0.471702 -0.132981
 1 0.471702 -0.132981
 2 0.471702 -0.132981
 3 0.471702 -0.132981
 SURF 0X20
-mat 6
+mat 5
 refs 4
 7 0.471702 -0.132981
 6 0.471702 -0.132981
@@ -1671,8 +1460,8 @@ refs 4
 kids 0
 OBJECT poly
 name "RedLight.002"
-data 17
-RedLight.mesh.002
+data 12
+RedLight.002
 crease 40.0
 texture "Autopilot.png"
 texrep 1 1
@@ -1687,42 +1476,42 @@ numvert 8
 0.00279 0.00945 0.00425
 numsurf 6
 SURF 0X20
-mat 6
+mat 5
 refs 4
 1 0.415504 -0.082876
 0 0.415504 -0.082876
 4 0.415504 -0.082876
 5 0.415504 -0.082876
 SURF 0X20
-mat 6
+mat 5
 refs 4
 5 0.415504 -0.082876
 6 0.415504 -0.082876
 2 0.415504 -0.082876
 1 0.415504 -0.082876
 SURF 0X20
-mat 6
+mat 5
 refs 4
 6 0.288027 0.059708
 7 0.288063 0.03144
 3 0.353388 0.031446
 2 0.353352 0.059714
 SURF 0X20
-mat 6
+mat 5
 refs 4
 0 0.415504 -0.082876
 3 0.415504 -0.082876
 7 0.415504 -0.082876
 4 0.415504 -0.082876
 SURF 0X20
-mat 6
+mat 5
 refs 4
 0 0.415504 -0.082876
 1 0.415504 -0.082876
 2 0.415504 -0.082876
 3 0.415504 -0.082876
 SURF 0X20
-mat 6
+mat 5
 refs 4
 7 0.415504 -0.082876
 6 0.415504 -0.082876
