--- a/Models/Cockpit/Models/autopilot.ac
+++ b/Models/Cockpit/Models/autopilot.ac
@@ -1,6 +1,6 @@
 AC3Db
 MATERIAL "Button.005" rgb 0.400 0.450 0.600  amb 0.483 0.483 0.483  emis 0.250 0.250 0.250  spec 0.300 0.300 0.300  shi 32 trans 0.000
-MATERIAL "Aquire.005" rgb 0.400 0.400 0.000  amb 0.200 0.200 0.000  emis 0.050 0.050 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
+MATERIAL "Aquire.005" rgb 0.200 0.200 0.000  amb 0.1 0.1 0.0  emis 0.1 0.1 0.00  spec 0.300 0.300 0.300  shi 32 trans 0.000
 MATERIAL "ButtonTexture.005" rgb 0.000 0.000 0.000  amb 0.000 0.000 0.000  emis 0.000 0.000 0.000  spec 0.000 0.000 0.000  shi 32 trans 0.000
 MATERIAL "Label.005" rgb 1.000 1.000 1.000  amb 0.300 0.300 0.300  emis 0.033 0.033 0.033  spec 0.300 0.300 0.300  shi 32 trans 0.000
 MATERIAL "Number.010" rgb 1.000 1.000 1.000  amb 1.000 1.000 1.000  emis 0.000 0.000 0.000  spec 0.300 0.300 0.300  shi 32 trans 0.000
@@ -803,6 +803,8 @@ name "AAAquire"
 data 17
 AAAquire.mesh.005
 crease 40.0
+texture "yellow_plastic.png"
+texrep 1 1
 numvert 6
 0.005 0.0025 -0.135
 0.005 0.0025 -0.15
@@ -814,35 +816,35 @@ numsurf 5
 SURF 0X20
 mat 1
 refs 3
-1 0 0
+1 1 0
 0 0 0
-2 0 0
+2 0.5 1
 SURF 0X20
 mat 1
 refs 3
-4 0 0
-5 0 0
+4 1 0
+5 0.5 1
 3 0 0
 SURF 0X20
 mat 1
 refs 4
 0 0 0
 3 0 0
-5 0 0
-2 0 0
+5 0.5 1
+2 0.5 1
 SURF 0X20
 mat 1
 refs 4
-5 0 0
-4 0 0
-1 0 0
-2 0 0
+5 0.5 1
+4 1 0
+1 1 0
+2 0.5 1
 SURF 0X20
 mat 1
 refs 4
 0 0 0
-1 0 0
-4 0 0
+1 1 0
+4 1 0
 3 0 0
 kids 0
 OBJECT poly
@@ -11669,6 +11671,8 @@ name "GLAquire"
 data 17
 GLAquire.mesh.005
 crease 40.0
+texture "yellow_plastic.png"
+texrep 1 1
 numvert 6
 0.005 0.0025 -0.06
 0.005 0.0025 -0.075
@@ -11680,35 +11684,35 @@ numsurf 5
 SURF 0X20
 mat 1
 refs 3
-1 0 0
+1 1 0
 0 0 0
-2 0 0
+2 0.5 1
 SURF 0X20
 mat 1
 refs 3
-4 0 0
-5 0 0
+4 1 0
+5 0.5 1
 3 0 0
 SURF 0X20
 mat 1
 refs 4
 0 0 0
 3 0 0
-5 0 0
-2 0 0
+5 0.5 1
+2 0.5 1
 SURF 0X20
 mat 1
 refs 4
-5 0 0
-4 0 0
-1 0 0
-2 0 0
+5 0.5 1
+4 1 0
+1 1 0
+2 0.5 1
 SURF 0X20
 mat 1
 refs 4
 0 0 0
-1 0 0
-4 0 0
+1 1 0
+4 1 0
 3 0 0
 kids 0
 OBJECT poly
@@ -18509,6 +18513,8 @@ name "LAAquire"
 data 17
 LAAquire.mesh.005
 crease 40.0
+texture "yellow_plastic.png"
+texrep 1 1
 numvert 6
 0.005 0.0025 -0.01
 0.005 0.0025 -0.025
@@ -18520,35 +18526,35 @@ numsurf 5
 SURF 0X20
 mat 1
 refs 3
-1 0 0
+1 1 0
 0 0 0
-2 0 0
+2 0.5 1
 SURF 0X20
 mat 1
 refs 3
-4 0 0
-5 0 0
+4 1 0
+5 0.5 1
 3 0 0
 SURF 0X20
 mat 1
 refs 4
 0 0 0
 3 0 0
-5 0 0
-2 0 0
+5 0.5 1
+2 0.5 1
 SURF 0X20
 mat 1
 refs 4
-5 0 0
-4 0 0
-1 0 0
-2 0 0
+5 0.5 1
+4 1 0
+1 1 0
+2 0.5 1
 SURF 0X20
 mat 1
 refs 4
 0 0 0
-1 0 0
-4 0 0
+1 1 0
+4 1 0
 3 0 0
 kids 0
 OBJECT poly
@@ -24164,6 +24170,8 @@ name "VLAquire"
 data 17
 VLAquire.mesh.005
 crease 40.0
+texture "yellow_plastic.png"
+texrep 1 1
 numvert 6
 0.005 0.0025 0.065
 0.005 0.0025 0.05
@@ -24175,35 +24183,35 @@ numsurf 5
 SURF 0X20
 mat 1
 refs 3
-1 0 0
+1 1 0
 0 0 0
-2 0 0
+2 0.5 1
 SURF 0X20
 mat 1
 refs 3
-4 0 0
-5 0 0
+4 1 0
+5 0.5 1
 3 0 0
 SURF 0X20
 mat 1
 refs 4
 0 0 0
 3 0 0
-5 0 0
-2 0 0
+5 0.5 1
+2 0.5 1
 SURF 0X20
 mat 1
 refs 4
-5 0 0
-4 0 0
-1 0 0
-2 0 0
+5 0.5 1
+4 1 0
+1 1 0
+2 0.5 1
 SURF 0X20
 mat 1
 refs 4
 0 0 0
-1 0 0
-4 0 0
+1 1 0
+4 1 0
 3 0 0
 kids 0
 OBJECT poly
